fix bug of not showing messages

--- a/src/RoomView/RoomView.css
+++ b/src/RoomView/RoomView.css
@@ -2,7 +2,5 @@
   height: calc(100vh - 2.8rem - 40px);
   width: 100%;
   padding: 0;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column-reverse;
+  display: grid;
 }
